--- a/Scripts/Untitled.ipynb
+++ b/Scripts/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4e5f431",
+   "id": "bf05ea71",
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "93260ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c83125b9",
+   "id": "d4de71ad",
    "metadata": {},
    "outputs": [],
    "source": []
